- updated empty result or server error status codes - updated old routes, installed sqlite - added accommodation and sale likes and bookmark relationships - fixed query for liking and bookmarking posts - fixed fetching chats query; response obj now matches what FE expects. - added routes to fetch user's likes, bookmarks, and posts.
